--- a/server/.env
+++ b/server/.env
@@ -6,14 +6,14 @@ ACCESS_TOKEN_SECRET= GL>QOb:TK0>:e&XKY?<@,L_i[
 
 REFRESH_TOKEN_SECRET= 5PK:T{Qc,ZfSaB&uP=|5C5>=Bm'
 
-CLIENT_URL = http://localhost:3000/
+CLIENT_URL = http://localhost:3000
 
 
-MAILING_SERVICE_CLIENT_ID = 704421274869-3r0hcg6p5jinna6bg070ol713c18dvlh.apps.googleusercontent.com
+MAILING_SERVICE_CLIENT_ID = 1018153860225-sun45c22catdsclgtl9uo0bmid7267a0.apps.googleusercontent.com
 
-MAILING_SERVICE_CLIENT_SECRET = r3vct4PwuDUw0RHrT2K8HPXV
+MAILING_SERVICE_CLIENT_SECRET = GK3idvMygTD9XZIVjJZCBmoN
 
-MAILING_SERVICE_REFRESH_TOKEN = 1//04UIGWTXx-xc1CgYIARAAGAQSNwF-L9Ir43UqHCEzG3AK2x2Z-oSiEZkIHS9LvZ8Ggd3teOhAZLCVa2rCuQfkgfMp9uSpfx7PEZY
+MAILING_SERVICE_REFRESH_TOKEN = 1//046DcvBcoQL0_CgYIARAAGAQSNwF-L9IrMBbDrMmMTeWnDND-ViDRy44GCLrbBK1ijxnFYNoicBxav2wcEXv4xzE0X6fK7O_BcKM
 
 SENDER_EMAIL_ADDRESS = arrennbaral@gmail.com
 
